@@ -1,3 +1,6 @@
+2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
+	* audio/Audio.cc: Don't call SDL::CloseAudio(). Bad things seem to happen in there.
+
 2000-11-24  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Write out correct count for 'monsnpcs.dat'.
